fixed alignment issue of cards on filtering

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -317,7 +317,7 @@ h2 {
 
 
 .movie-container:nth-of-type(3) {
-  margin-right: 0;
+  /*margin-right: 0;*/
 }
 
 .movie-poster {
